-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6
-
None
-
c5f58f40e (dev), 50f73c61b (6.6)
In current dev, reproduce by e.g.
qml tests/baseline/scenegraph/data/borderimages/borderimage.qml
produces warning
QQmlPropertyCache::handleOverride() [284]: Final member sourceSize is overridden in class QQuickBorderImage. The override won't be used.
It seems QQuickBorderImage has redeclared sourceSize to make it read-only, and that is interpreted as an override of the declaration in QQuickImageBase. Both places were recently marked as FINAL:
https://codereview.qt-project.org/c/qt/qtdeclarative/+/480201