Move QQuickImageBase::sourceSize to QQuickImage

The sourceSize property in QQuickImageBase were shadowed by the
QQuickBorderImage class because of a change I made in
351979e05ad2a861fc3e6f8d1.

Since QQuickImageBase functions as the base class for QQuickBorderImage
and QQuickImage, and since sourceSize in those two classes work slighly
different (e.g QQuickBorderImage::sourceSize being read-only).
It would make more sense to simply let those two types declare their own
distinct Q_PROPERTIES, instead of using inheritance.

Fixes: QTBUG-116399
Pick-to: 6.6
Change-Id: Ia238b58307b16031b56866450d74f10d1e59b62f
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>